--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin=""/>
     <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans:wght@400;700&amp;display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body class="dark:bg-dark-gray-700 bg-light-gray-200">
     <div id="root"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
